# lauetools

./: .gitignore  .gitlab-ci.yml  .readthedocs.yaml  .readthedocs.yml  MANIFEST.in  README.md  cli.py  codemeta.json  conf.py  index.rst  pyproject.toml  requirements.txt  setup.py
.github/workflows/: .readthedocs_workflow.yml  complete_workflow.yml  publish_PYPI.yml  publish_conda.yml  publish_conda_noarch.yml  python-package.yml  readthedocs_workflow.yml
LaueTools/: Al2O3_1000K.cor  AutoindexationGUI.py  B0matrixLatticeEditor.py  CCDFileParametersGUI.py  CrystalParameters.py  DetectorCalibration.py  DetectorParameters.py  FitOrient.py  HKL_6M_Marc_shorter.txt  HistogramPlot.py  IOLaueTools.py  IOimagefile.py  ImshowFrame.py  LaueAutoAnalysis.py  LaueDataResultsPlots.py  LaueGeometry.py  LaueSimulatorGUI.py  LaueSpotsEditor.py  LaueToolsGUI.py  Lauehdf5.py  ManualIndexFrame.py  MatrixEditor.py  MessageCommand.py  Mg_nlut3.angles  Mg_nlut4.angles  OpenSpotsListFileGUI.py  ParametricLaueSimulator.py  PeakSearchGUI.py  PeaksListBoard.py  Plot1DFrame.py  PlotLimitsBoard.py  PlotRefineGUI.py  Position XY_2D_X__date_20230421_170654  Position XY_2D_Y__date_20230421_170654  ProportionalSplitter.py  ResultsIndexationGUI.py  SimulFrame.py  SpotModel.py  Ti_nlut4.angles  addscriptsfolder.py  (+55 more)
LaueTools/Daxm/: DaxmAnalyzerGui.py
LaueTools/Diamond/: diamond.py  multigrain.py  multigrain_addendum.py  spec_reader.py
LaueTools/Documentation/: .gitlab-ci.yml  Makefile
LaueTools/FileSeries/: Build_Summary.py  Index_Refine.py  Peak_Search.py  Peak_Search.py.bak  Plot_Maps2.py  mainFileSeriesGUI.py  multigrain.py  multigrainFS.py  param_multigrain.py
LaueTools/FileSeries (copy 25 oct 2024)/: Build_Summary.py  module_graphique.py
LaueTools/GUI/: AutoindexationGUI.py  B0matrixLatticeEditor.py  CCDFileParametersGUI.py  DetectorCalibration.py  DetectorParameters.py  HistogramPlot.py  ImshowFrame.py  LaueSimulatorGUI.py  (+21 more)
conda/: meta.yaml
conda.noarch/: conda_build_config.yaml  meta.yaml
doc/: .gitlab-ci.yml  GUIs.rst  Makefile  Makfilesphinx  PeakSearch.rst  Simulation_Module.rst  conf.py  getStarted.rst  index.rst  installation.rst  intro.rst  make.bat  requirements.txt
tests/: test_indexfileseries.py
(+456 files in other folders)
