[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lauetools"
version = "3.1.48"  # Replace with your current version
authors = [
    {name = "J S Micha", email = "micha@esrf.fr"},
]
description = "Distribution of LaueTools Package from github.com/BM32ESRF/Lauetools repository for pip"
readme = "README.md"
license = {text = "MIT"}
keywords = ["Lauetools", "x-ray", "scattering", "data analysis", "GUI", "Laue"]
classifiers = [
    "Programming Language :: Python :: 2.7",
    "Programming Language :: Python :: 3.5",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8, <3.13"
dependencies = [
    "docutils>=0.3",
    "numpy>=1.0.3",
    "scipy>=0.15.0",
    "matplotlib>=2.0.0",
    "wxpython>=3.0",  # Keep this here for runtime
    "networkx>=2.1",
    "tqdm>=4.60.0",
    "h5py>=3.1",
    "scikit-image>=0.1.0",
    "astropy>=3.0",
    "fabio>=0.11.0",
    "PyYAML>=6.0.1",
]

[project.scripts]
lauetools = "LaueTools.GUI.mainGUI:start"
peaksearch = "LaueTools.FileSeries.Peak_Search:start"
indexrefine = "LaueTools.FileSeries.Index_Refine:start"
plotmeshGUI = "LaueTools.plotmeshspecGUI:start"
buildsummary = "LaueTools.FileSeries.Build_Summary:start"
plotmap = "LaueTools.FileSeries.Plot_Maps2:start"
mapanalyzer = "LaueTools.FileSeries.mainFileSeriesGUI:start"
daxmgui = "LaueTools.daxmgui:start"
lauetools-copy = "LaueTools.cli:copy_resources"
lauetools-copy-materials = "LaueTools.cli:copy_materials"
lauetools-add-material = "LaueTools.cli_add_material:main"

[project.urls]
Homepage = "https://github.com/BM32ESRF/lauetools"

[tool.setuptools]
packages = ["LaueTools"]
include-package-data = true

[tool.setuptools.package-data]
LaueTools = ["scripts/*"]
